# eksanos

./: README.md  com.github.eksanos.eksanos.yml  com.github.keilith-l.eksanos.yml  meson.build
.github/workflows/: main.yml
data/: eksanos.appdata.xml  eksanos.desktop  eksanos.metainfo.xml  gresource.xml  hello-packaging.appdata.xml  style.css
data/data/: hello-packaging.desktop
src/: Application.vala  Board.vala  GameController.vala  MainMenu.vala  MainWindow.vala  Player.vala  Tile.vala
src/Controllers/: Game.vala
src/Model/: Board.vala  Game.vala  Player.vala  Tile.vala
src/Widgets/: BoardGrid.vala  ColorDropDown.vala  GameScreen.vala  PlayerInfoBox.vala  TileButton.vala  TurnTrackerStack.vala
src/Widgets/Dialogs/: MatchOverDialog.vala
